Set splash screen

--- a/stage2/01-sys-tweaks/files/autologin.conf
+++ b/stage2/01-sys-tweaks/files/autologin.conf
@@ -1,4 +1,4 @@
 
 [Service]
 ExecStart=
-ExecStart=-/sbin/agetty --autologin track8 --noclear %I 38400 linux
+ExecStart=-/sbin/agetty --skip-login --nonewline --autologin track8 --noclear --noissue --nohints %I 38400 linux
